<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.AboutFragment"
    android:background="#748F57">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/text_view_about1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/wellcome"/>

    <TextView
        android:id="@+id/text_view_about2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/hello_blank_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_about1" />

    <ImageView
        android:id="@+id/imageView_frederik"
        android:padding="10dp"
        android:layout_width="131dp"
        android:layout_height="152dp"
        android:src="@drawable/frederik"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_about2" />

    <ImageView
        android:id="@+id/imageView_thomas"
        android:padding="10dp"
        android:layout_width="131dp"
        android:layout_height="147dp"
        android:src="@drawable/thomas"
        app:layout_constraintStart_toEndOf="@+id/textView_frederik"
        app:layout_constraintTop_toBottomOf="@+id/text_view_about2" />

    <ImageView
        android:id="@+id/imageView_simon"
        android:padding="10dp"
        android:layout_width="131dp"
        android:layout_height="145dp"
        android:src="@drawable/simon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_frederik" />

    <ImageView
        android:id="@+id/imageView_rasmus"

        android:layout_width="131dp"
        android:layout_height="146dp"
        android:src="@drawable/rasmus"
        app:layout_constraintStart_toEndOf="@+id/textView_simon"
        app:layout_constraintTop_toBottomOf="@+id/imageView_thomas" />

    <TextView
        android:id="@+id/textView_frederik"
        android:layout_width="65dp"
        android:layout_height="150dp"
        android:text="@string/text_frederik"
        app:layout_constraintStart_toEndOf="@+id/imageView_frederik"
        app:layout_constraintTop_toBottomOf="@+id/text_view_about2"
        />

    <TextView
        android:id="@+id/textView_simon"
        android:layout_width="65dp"
        android:layout_height="150dp"
        android:text="@string/text_simon"
        app:layout_constraintStart_toEndOf="@+id/imageView_simon"
        app:layout_constraintTop_toBottomOf="@+id/textView_frederik" />

    <TextView
        android:id="@+id/textView_thomas"
        android:layout_width="65dp"
        android:layout_height="150dp"
        android:text="@string/text_thomas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_thomas"
        app:layout_constraintTop_toBottomOf="@+id/text_view_about2" />

    <TextView
        android:id="@+id/textView_rasmus"
        android:layout_width="65dp"
        android:layout_height="150dp"
        android:text="@string/text_ralle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_rasmus"
        app:layout_constraintTop_toBottomOf="@+id/textView_thomas" />

    <ImageView
        android:id="@+id/imageView_asbjørn"
        android:layout_width="131dp"
        android:layout_height="166dp"
        android:padding="10dp"
        android:src="@drawable/asbjorn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_simon" />

    <TextView
        android:id="@+id/textView_asbjørn"
        android:layout_width="65dp"
        android:layout_height="150dp"
        android:text="@string/text_asbjorn"
        app:layout_constraintStart_toEndOf="@+id/imageView_asbjørn"
        app:layout_constraintTop_toBottomOf="@+id/textView_simon" />

    <TextView
        android:id="@+id/textView_info"
        android:layout_width="209dp"
        android:layout_height="161dp"
        android:padding="15dp"
        android:text="@string/text_info"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_asbjørn"
        app:layout_constraintTop_toBottomOf="@+id/textView_rasmus" />


</androidx.constraintlayout.widget.ConstraintLayout>